@@ -324,6 +324,7 @@ body.explorer-open {
     }
 
     .nav-submenu {
+        transform: translate3d(0, 0, 0);
         position: fixed;
         height: 100%;
         width: 0;
