@@ -13,6 +13,7 @@ Changelog
  * Fix: Locked pages can no longer be unpublished (Alex Bridge)
  * Fix: Site records now implement `get_by_natural_key`
  * Fix: Creating pages at the root level (and any other instances of the base `Page` model) now properly respects the `parent_page_types` setting
+ * Fix: Settings menu now opens correctly from the page editor and styleguide views
 
 1.2 (12.11.2015)
 ~~~~~~~~~~~~~~~~
